# py-starters

./: README.md
pkgname/: .gitignore  Dockerfile  LICENSE  README.md  setup.cfg  setup.py
pkgname/pkgname/: fib.py
pkgname/tests/: test_fib.py
