[metadata]
name = pkgname
version = 0.0.1
description = Awesome pkgname
author = pingjiang
author-email = pingjiang1989@gmail.com
license = file: LICENSE
url = https://github.com/pingjiang/py-starters
# description-file = README.md
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
keywords = foo, bar
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts = bin/pkgname_cli
# install_requires =
#   six
#   importlib; python_version == "2.6"

[options.package_data]
* = README.md, LICENSE

[options.packages.find]
exclude =
    tests